Fixed spelling mistake
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@158973 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -41,7 +41,7 @@
 				<dir name="Compat">
 					<dir name="Constant">
 						<file>E_STRICT.php</file>
-						<file>PATH_SEPERATOR.php</file>
+						<file>PATH_SEPARATOR.php</file>
 					</dir>
 					<dir name="Function">
 						<file>array_combine.php</file>
