Changed description wording
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@158989 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package version="1.0">
 	<name>PHP_Compat</name>
-	<summary>PHP_Compat provides missing functionality in the form of Constants and Functions for older versions of PHP.</summary>
+	<summary>Provides missing functionality for older versions of PHP.</summary>
 
 	<description>
 		PHP_Compat provides missing functionality in the form of Constants and Functions for older versions of PHP.
