--- a/package.xml
+++ b/package.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <package version="1.0">
 	<name>PHP_Compat</name>
 	<summary>Provides missing functionality for older versions of PHP.</summary>
@@ -28,6 +29,16 @@
 	</maintainers>
 
 	<release>
+		<version>0.1</version>
+		<date>2004-05-19</date>
+		<license>PHP License</license>
+		<state>beta</state>
+		<notes>
+			This package is in beta while any bugs are ironed out.
+		</notes>
+	</release>
+
+	<release>
 		<version>0.2</version>
 		<date>2004-05-27</date>
 		<license>PHP License</license>
@@ -40,7 +51,9 @@
 			* STDERR
 
 			Made a number of bugfixes.
-			Added PHP style error messages.
+			Added replica PHP error messages.
+
+			Still in beta until any last bugs are found and removed.
 		</notes>
 		<filelist>
 			<dir name="/" baseinstalldir="PHP" role="php">	 
@@ -65,15 +78,4 @@
 			</dir>
 		</filelist>
 	</release>
-
-	<release>
-		<version>0.1</version>
-		<date>2004-05-19</date>
-		<license>PHP License</license>
-		<state>beta</state>
-		<notes>
-			This package is in beta while any bugs are ironed out.
-		</notes>
-	</release>
-
 </package>
