Added more tests
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@159941 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -121,6 +121,15 @@
 					<file>07_str-split_02_chunksize.phpt</file>
 					<file>07_str-split_03_lessremainder.phpt</file>
 					<file>07_str-split_04_bigchunk.phpt</file>
+					<file>08_file-put-contents_01_simple.phpt</file>
+					<file>09_file-get-contents_01_simple.phpt</file>
+					<file>10_is-a_01_simple.phpt</file>
+					<file>11_scandir_01_simple.phpt</file>
+					<file>12_PATH_SEPARATOR.phpt</file>
+					<file>13_E_STRICT.phpt</file>
+					<file>14_STDOUT.phpt</file>
+					<file>15_STDERR.phpt</file>
+					<file>15_STDIN.phpt</file>
 				</dir>
 			</dir>
 		</filelist>
