Prepared for next release
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@159948 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -68,7 +68,7 @@
 	</release>
 
 	<release>
-		<version>0.3</version>
+		<version>1.0.0RC1</version>
 		<date>2004-05-28</date>
 		<license>PHP License</license>
 		<state>beta</state>
@@ -78,9 +78,9 @@
 			* array_udiff
 			* array_udiff_assoc
 
-			Added Unit tests.
-
-			Still in beta!
+			Heavily modified file_put_contents for greater support
+			A couple of bug fixes
+			Added complete unit testing!
 		</notes>
 		<filelist>
 			<dir name="/" baseinstalldir="PHP" role="php">	 
