Fixed bug with FILE_APPEND
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@159962 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -94,8 +94,8 @@
                         <file>STDIN.php</file>
                         <file>STDOUT.php</file>
                         <file>STDERR.php</file>
-						<file>FILE_USE_INCLUDE_PATH</file>
-						<file>FILE_APPEND</file>
+						<file>FILE_USE_INCLUDE_PATH.php</file>
+						<file>FILE_APPEND.php</file>
                     </dir>
                     <dir name="Function">
                         <file>array_combine.php</file>
