--- a/package.xml
+++ b/package.xml
@@ -114,28 +114,30 @@
                     <file>01_loadfunction_02_array.phpt</file>
                     <file>02_loadconstant_01_simple.phpt</file>
                     <file>02_loadconstant_02_array.phpt</file>
-                    <file>03_array-combine_01_simple.phpt</file>
-                    <file>04_array-udiff_01_simple.phpt</file>
-                    <file>05_array-udiff-assoc_01_simple.phpt</file>
-                    <file>06_http-build-query_01_simple.phpt</file>
-                    <file>06_http-build-query_02_complexarray.phpt</file>
-                    <file>06_http-build-query_03_numindex.phpt</file>
-                    <file>06_http-build-query_04_object.phpt</file>
-                    <file>07_str-split_01_simple.phpt</file>
-                    <file>07_str-split_02_chunksize.phpt</file>
-                    <file>07_str-split_03_lessremainder.phpt</file>
-                    <file>07_str-split_04_bigchunk.phpt</file>
-                    <file>08_file-put-contents_01_simple.phpt</file>
-                    <file>08_file-put-contents_02_array.phpt</file>
-                    <file>08_file-put-contents_03_append.phpt</file>
-                    <file>09_file-get-contents_01_simple.phpt</file>
-                    <file>10_is-a_01_simple.phpt</file>
-                    <file>11_scandir_01_simple.phpt</file>
-                    <file>12_PATH_SEPARATOR.phpt</file>
-                    <file>13_E_STRICT.phpt</file>
-                    <file>14_STDOUT.phpt</file>
-                    <file>15_STDERR.phpt</file>
-                    <file>15_STDIN.phpt</file>
+                    <file>10_array-combine_01_simple.phpt</file>
+                    <file>11_array-udiff_01_simple.phpt</file>
+                    <file>12_array-udiff-assoc_01_simple.phpt</file>
+                    <file>13_http-build-query_01_simple.phpt</file>
+                    <file>13_http-build-query_02_complexarray.phpt</file>
+                    <file>13_http-build-query_03_numindex.phpt</file>
+                    <file>13_http-build-query_04_object.phpt</file>
+                    <file>14_str-split_01_simple.phpt</file>
+                    <file>14_str-split_02_chunksize.phpt</file>
+                    <file>14_str-split_03_lessremainder.phpt</file>
+                    <file>14_str-split_04_bigchunk.phpt</file>
+                    <file>15_file-put-contents_01_simple.phpt</file>
+                    <file>15_file-put-contents_02_array.phpt</file>
+                    <file>15_file-put-contents_03_append.phpt</file>
+                    <file>16_file-get-contents_01_simple.phpt</file>
+                    <file>17_is-a_01_simple.phpt</file>
+                    <file>18_scandir_01_simple.phpt</file>
+                    <file>50_PATH_SEPARATOR.phpt</file>
+                    <file>50_E_STRICT.phpt</file>
+                    <file>50_STDOUT.phpt</file>
+                    <file>50_STDERR.phpt</file>
+                    <file>50_STDIN.phpt</file>
+					<file>50_FILE_APPEND.phpt</file>
+					<file>50_FILE_USE_INCLUDE_PATH.phpt</file>
                 </dir>
             </dir>
         </filelist>
