Added the new tests
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@160160 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -148,6 +148,12 @@ Removed the seperate files for FILE_USE_INCLUDE_PATH/FILE_APPEND</notes>
 					<file>stripos_01_simple.phpt</file>
 					<file>strripos_01_simple.phpt</file>
 					<file>str-ireplace_01_simple.phpt</file>
+					<file>str-ireplace_02_subjectarray.phpt</file>
+					<file>str-ireplace_03_search-arr-replace-arr.phpt</file>
+					<file>str-ireplace_04_search-arr-replace-str.phpt</file>
+					<file>str-ireplace_05_search-str-replace-arr.phpt</file>
+					<file>str-ireplace_06_allarray.phpt</file>
+					<file>str-ireplace_07_count.phpt</file>
 					<file>E_STRICT.phpt</file>
 					<file>FILE.phpt</file>
 					<file>PATH_SEPARATOR.phpt</file>
