--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@ Constants:
 * FILE_USE_INCLUDE_PATH, FILE_IGNORE_NEW_LINES, FILE_SKIP_EMPTY_LINES, FILE_APPEND, FILE_NO_DEFAULT_CONTEXT 
 
 Functions:
+* array_change_key_case
 * array_combine
 * file_get_contents
 * file_put_contents
@@ -96,6 +97,15 @@ Added complete unit testing!</notes>
 
 Removed the seperate files for STDIN/STDOUT/STDERR
 Removed the seperate files for FILE_USE_INCLUDE_PATH/FILE_APPEND</notes>
+	</release>
+
+	<release>
+		<version>1.0.0</version>
+		<date>2004-06-2</date>
+		<license>PHP License</license>
+		<state>stable</state>
+		<notes>Added more components:
+* array_change_key_case</notes>
 		<filelist>
 			<dir name="/" baseinstalldir="PHP" role="php">	 
 				<file>Compat.php</file>
@@ -107,6 +117,7 @@ Removed the seperate files for FILE_USE_INCLUDE_PATH/FILE_APPEND</notes>
 						<file>FILE.php</file>
 					</dir>
 					<dir name="Function">
+						<file>array_change_key_case.php</file>
 						<file>array_combine.php</file>
 						<file>file_get_contents.php</file>
 						<file>file_put_contents.php</file>
@@ -123,6 +134,7 @@ Removed the seperate files for FILE_USE_INCLUDE_PATH/FILE_APPEND</notes>
 					</dir>
 				</dir>
 				<dir name="tests" role="test">
+					<file>array-change-key-case_01_simple.phpt</file>
 					<file>array-combine_01_simple.phpt</file>
 					<file>array-udiff_01_simple.phpt</file>
 					<file>array-udiff-assoc_01_simple.phpt</file>
