Added extra test
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@160981 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -188,6 +188,7 @@ Removed the seperate files for FILE_USE_INCLUDE_PATH/FILE_APPEND</notes>
 					<file>str-split_lessremainder.phpt</file>
 					<file>str-split_simple.phpt</file>
 					<file>stripos_simple.phpt</file>
+					<file>stripos_offset.phpt</file>
 					<file>strripos_offset.phpt</file>
 					<file>strripos_simple.phpt</file>
 					<file>var_export_simple.phpt</file>
