--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,7 @@
 
 Constants:
 * E_STRICT
-* PATH_SEPERATOR
+* PATH_SEPARATOR
 * STDIN, STDOUT, STDERR
 * FILE_USE_INCLUDE_PATH, FILE_IGNORE_NEW_LINES, FILE_SKIP_EMPTY_LINES, FILE_APPEND, FILE_NO_DEFAULT_CONTEXT 
 
